--- a/index.html
+++ b/index.html
@@ -4,30 +4,18 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Multi-purpose Saas landing page">
+    <meta name="description" content="Unlimited Graphic Design, Flat Monthly Subscription Service, No Contracts">
     <meta name="author" content="ThemeEaster">
-    <title>SaasDesk | Saas Startup HTML Template</title>
+    <title>Unlimited grahic design services</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-
     <link rel="stylesheet" href="css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="css/themify-icons.css">
-
-    <link rel="stylesheet" href="css/elegant-line-icons.css">
-
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="css/slicknav.min.css">
-
     <link rel="stylesheet" href="css/animate.min.css">
-
-    <link rel="stylesheet" href="css/slick.css">
-
-    <link rel="stylesheet" href="css/slick-theme.css">
-
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
-
+    <meta property="og:image"
+    content="hero.png" />    
+    <link rel="image_src" href="hero.png" />
     <link rel="stylesheet" href="css/responsive.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
