meta tags updated

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Multi-purpose Saas landing page">
+    <meta name="description" content="Unlimited Graphic Design, Flat Monthly Subscription Service, No Contracts">
     <meta name="author" content="ThemeEaster">
-    <title>SaasDesk | Saas Startup HTML Template</title>
+    <title>Unlimited grahic design services</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -24,13 +23,14 @@
     <link rel="stylesheet" href="css/slick.css">
 
     <link rel="stylesheet" href="css/slick-theme.css">
-
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+    <meta property="og:image" content="hero.png" />
+    <link rel="image_src" href="hero.png" />
     <link rel="stylesheet" href="css/responsive.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
-        integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body data-spy="scroll" data-target="#navmenu" data-offset="70">
@@ -104,7 +104,7 @@
                                     <textarea class="form-control" name="contact-message" rows="10"
                                         placeholder="How can we help?"></textarea>
                                 </div>
-                            </div>                            
+                            </div>
                             <div class="col">
                                 <div class="d-none alert alert-success" role="alert" data-success-message>
                                     Thanks, a member of our team will be in touch shortly.
@@ -112,8 +112,8 @@
                                 <div class="d-none alert alert-danger" role="alert" data-error-message>
                                     Please fill all fields correctly.
                                 </div>
-                                <button type="submit" class="default-btn" data-loading-text="Sending">                                    
-                                  Send
+                                <button type="submit" class="default-btn" data-loading-text="Sending">
+                                    Send
                                 </button>
                             </div>
                         </div>
