--- a/pricing.html
+++ b/pricing.html
@@ -4,11 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Multi-purpose Saas landing page">
+    <meta name="description" content="Unlimited Graphic Design, Flat Monthly Subscription Service, No Contracts">
     <meta name="author" content="ThemeEaster">
-    <title>SaasDesk | Saas Startup HTML Template</title>
+    <title>Unlimited grahic design services</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
-
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/themify-icons.css">
@@ -24,13 +23,14 @@
     <link rel="stylesheet" href="css/slick.css">
 
     <link rel="stylesheet" href="css/slick-theme.css">
-
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
+    <meta property="og:image" content="hero.png" />
+    <link rel="image_src" href="hero.png" />
     <link rel="stylesheet" href="css/responsive.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
-        integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body data-spy="scroll" data-target="#navmenu" data-offset="70">
@@ -46,7 +46,7 @@
                         <ul class="nav">
                             <li><a data-scroll class="nav-link" href="index.html">Home <span
                                         class="sr-only">(current)</span></a></li>
-                            <li><a data-scroll class="nav-link" href="services.html">services</a></li>                            
+                            <li><a data-scroll class="nav-link" href="services.html">services</a></li>
                             <li><a data-scroll class="nav-link active" href="pricing.html">Pricing</a></li>
                             <li><a data-scroll class="nav-link" href="Works.html">Works</a></li>
                             <li><a data-scroll class="nav-link" href="faq.html">FAQ</a></li>
@@ -135,7 +135,7 @@
                             <li>Unlimited Brands</li>
                             <li>24hrs Output</li>
                             <li>Logo Creation</li>
-                            <li>Apps look & feel</li>                            
+                            <li>Apps look & feel</li>
                             <li>Custom illustrations</li>
                             <li>All source files delivered</li>
                             <li>No Long Term Contract</li>
@@ -160,7 +160,7 @@
                             <li>Unlimited Revisions</li>
                             <li>Unlimited Brands</li>
                             <li>24hrs Output</li>
-                            <li>Logo Creation</li>                            
+                            <li>Logo Creation</li>
                             <li>UI UX</li>
                             <li>ecommerce</li>
                             <li>SEO</li>
@@ -182,7 +182,7 @@
         </div>
     </section>
 
-   
+
     <section class="cta-section">
         <div class="container">
             <div class="row cta-wrap d-flex align-items-center">
@@ -230,13 +230,13 @@
                 <div class="col-md-2 col-sm-6 padding-15">
 
                 </div>
-                <div class="col-md-2 col-sm-6 padding-15">                   
+                <div class="col-md-2 col-sm-6 padding-15">
                 </div>
                 <div class="col-md-2 col-sm-6 padding-15">
                     <div class="widget-links">
                         <h3>Company</h3>
-                        <ul>                            
-                            <li><a href="pricing.html">Pricing</a></li>                            
+                        <ul>
+                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="Works.html">Works</a></li>
                             <li><a href="faq.html">FAQ</a></li>
