--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <title>Unlimited grahic design services</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="css/themify-icons.css">
-
-    <link rel="stylesheet" href="css/elegant-line-icons.css">
+    
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -20,16 +17,16 @@
 
     <link rel="stylesheet" href="css/animate.min.css">
 
-    <link rel="stylesheet" href="css/slick.css">
 
-    <link rel="stylesheet" href="css/slick-theme.css">
+
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://rawgit.com/LeshikJanz/libraries/master/Bootstrap/baguetteBox.min.css">
     <meta property="og:image" content="hero.png" />
     <link rel="image_src" href="hero.png" />
     <link rel="stylesheet" href="css/responsive.css">
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body data-spy="scroll" data-target="#navmenu" data-offset="70">
@@ -45,10 +42,10 @@
                         <ul class="nav">
                             <li><a data-scroll class="nav-link active" href="index.html">Home <span
                                         class="sr-only">(current)</span></a></li>
-                            <li><a data-scroll class="nav-link" href="services.html">services</a></li>                            
+                            <li><a data-scroll class="nav-link" href="services.html">services</a></li>
                             <li><a data-scroll class="nav-link" href="pricing.html">Pricing</a></li>
                             <li><a data-scroll class="nav-link" href="Works.html">Works</a></li>
-                            <li><a data-scroll class="nav-link" href="faq.html">FAQ</a></li>
+                            <li><a data-scroll class="nav-link active" href="faq.html">FAQ</a></li>
                         </ul>
                     </div>
                     <div class="header-btn">
@@ -251,7 +248,7 @@
             </div>
         </div>
     </section>
-   
+
     <section class="cta-section">
         <div class="container">
             <div class="row cta-wrap d-flex align-items-center">
@@ -271,7 +268,6 @@
             </div>
         </div>
     </section>
-    
     <section class="widget-section bd-bottom padding">
         <div class="bubble-effect">
             <div class="bubble b-1"></div>
@@ -300,13 +296,13 @@
                 <div class="col-md-2 col-sm-6 padding-15">
 
                 </div>
-                <div class="col-md-2 col-sm-6 padding-15">                   
+                <div class="col-md-2 col-sm-6 padding-15">
                 </div>
                 <div class="col-md-2 col-sm-6 padding-15">
                     <div class="widget-links">
                         <h3>Company</h3>
-                        <ul>                            
-                            <li><a href="pricing.html">Pricing</a></li>                            
+                        <ul>
+                            <li><a href="pricing.html">Pricing</a></li>
                             <li><a href="services.html">Services</a></li>
                             <li><a href="Works.html">Works</a></li>
                             <li><a href="faq.html">FAQ</a></li>
@@ -354,4 +350,5 @@
     </script>
 
 </body>
+
 </html>
