--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
             </div>
             <div class="row">
                 <div class="col-md-8 section-heading mb-40">
-                    <form action="/forms/mail_handler.php" data-form-email novalidate>
+                    <form action="mail_handler.php" data-form-email novalidate>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
