--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Unlimited grahic design services</title>
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    
+
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -40,7 +40,7 @@
                 <div class="d-flex menu-wrap">
                     <div id="navmenu" class="mainmenu">
                         <ul class="nav">
-                            <li><a data-scroll class="nav-link active" href="index.html">Home <span
+                            <li><a data-scroll class="nav-link active" href="">Home <span
                                         class="sr-only">(current)</span></a></li>
                             <li><a data-scroll class="nav-link" href="services.html">services</a></li>
                             <li><a data-scroll class="nav-link" href="pricing.html">Pricing</a></li>
@@ -199,46 +199,52 @@
             </div>
             <div class="tz-gallery">
                 <div class="row">
-                    <div class="col-sm-12 col-md-3">
+                    <div class="col-sm-12 col-md-4">
                         <a class="lightbox" href="img/gateman-min.jpg">
                             <img src="img/gateman-min.jpg" alt="Gateman">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-3">
-                        <a class="lightbox" href="img/gpee-cover-min.jpg">
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="geepee.html">
                             <img src="img/gpee-cover-min.jpg" alt="gateman">
                         </a>
-                    </div>
-                    <div class="col-sm-6 col-md-3">
-                        <a class="lightbox" href="img/gpeeiner-min.jpg">
-                            <img src="img/gpeeiner-min.jpg" alt="Gateman">
+                    </div>             
+                    <div class="col-sm-12 col-md-4">
+                        <a class="lightbox" href="jamawealth.html">
+                            <img src="img/jamawealth.jpg" alt="Gateman">
                         </a>
-                    </div>
-                    <div class="col-sm-12 col-md-3">
+                    </div>      
+                    <div class="col-sm-12 col-md-4">
                         <a class="lightbox" href="img/bill-board-min.jpg">
                             <img src="img/bill-board-min.jpg" alt="Gateman">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-3">
-                        <a class="lightbox" href="img/NZ-design-min.jpg">
-                            <img src="img/NZ-design-min.jpg" alt="Gateman">
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="img/NZBranding.png">
+                            <img src="img/NZBranding.png" alt="Gateman">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-4">
+                        <a class="lightbox" href="qfmslogin.html">
+                            <img src="img/qfms.jpg" alt="Standee">
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
                         <a class="lightbox" href="img/cs.jpg">
                             <img src="img/cs.jpg" alt="Gateman">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-4">
                         <a class="lightbox" href="img/star-logo.jpg">
                             <img src="img/star-logo.jpg" alt="Coast">
                         </a>
                     </div>
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-md-4">
                         <a class="lightbox" href="img/sms.jpg">
                             <img src="img/sms.jpg" alt="Standee">
                         </a>
                     </div>
+            
 
                 </div>
 
@@ -348,6 +354,19 @@
     <script>
         baguetteBox.run('.tz-gallery');
     </script>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/5eb7e6ee967ae56c52186cd9/default';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 
 </body>
 
