--- a/contact.html
+++ b/contact.html
@@ -68,12 +68,12 @@
             </div>
             <div class="row">
                 <div class="col-md-8 section-heading mb-40">
-                    <form action="mail_handler.php" data-form-email novalidate>
+                    <form action="mail_handler.php" method="post">
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Your Name *</label>
-                                    <input name="name" type="text" class="form-control" required>
+                                    <input type="text" name="name" class="form-control" required>
                                     <div class="invalid-feedback">
                                         Please type your name.
                                     </div>
@@ -82,8 +82,8 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Email Address *</label>
-                                    <input name="email" type="email" placeholder="you@yoursite.com"
-                                        class="form-control" required>
+                                    <input type="email" name="email" placeholder="you@yoursite.com" class="form-control"
+                                        required>
                                 </div>
                             </div>
                             <!-- <div class="col-md-6">
@@ -101,7 +101,7 @@
                             <div class="col-12">
                                 <div class="form-group">
                                     <label>Message:</label>
-                                    <textarea class="form-control" name="message" rows="10"
+                                    <textarea class="form-control" name="msg" rows="10"
                                         placeholder="How can we help?"></textarea>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                 <div class="d-none alert alert-danger" role="alert" data-error-message>
                                     Please fill all fields correctly.
                                 </div>
-                                <button type="submit" name="submit" value="Send" class="default-btn" data-loading-text="Sending">
+                                <button type="submit" name="submit" value="Send" class="default-btn">                                    
                                     Send
                                 </button>
                             </div>
@@ -122,7 +122,7 @@
                 <div class="col-md-4">
                     <div class="email-section mb-40">
                         <h2>Email</h2>
-                        <a href="#" class="lead">hello@company.io</a>
+                        <a href="mailto:hi@unlimiteddesign.in" class="lead">hi@unlimiteddesign.in</a>
                     </div>
                     <div class="email-section">
                         <h2>Call</h2>
@@ -131,6 +131,23 @@
                     </div>
                 </div>
             </div>
+            <!-- <div class="col-8">
+                <form action="mail_handler.php" method="post" name="form" class="form-box">
+                    <label for="name">Name</label><br>
+                    <input type="text" name="name" class="inp" placeholder="Enter Your Name" required><br>
+                    <label for="email">Email ID</label><br>
+                    <input type="email" name="email" class="inp" placeholder="Enter Your Email" required><br>
+                    <label for="phone">Phone</label><br>
+                    <input type="tel" name="phone" class="inp" placeholder="Enter Your Phone" required><br>
+                    <label for="message">Message</label><br>
+                    <textarea name="msg" class="msg-box" placeholder="Enter Your Message Here..."
+                        required></textarea><br>
+                    <input type="submit" name="submit" value="Send" class="sub-btn">
+                </form>
+                    <div class="d-none alert alert-success" role="alert" success-message>
+                                        Thanks, a member of our team will be in touch shortly.
+                    </div>
+            </div> -->
         </div>
     </section>
 
@@ -200,7 +217,7 @@
                     <div class="widget-links">
                         <h3>Get in touch</h3>
                         <ul>
-                            <li><a href="#">hello@graphicdesign.com </a></li>
+                            <li><a data-mce-href="mailto:hi@unlimiteddesign.in" href="mailto:hi@unlimiteddesign.in">info@freeagentsla.com&#65279;</a></li>
                             <li><a href="#">+91 891 929 9341</a></li>
                             <li><a href="#">+91 756 931 1901</a></li>
                         </ul>
