--- a/geepee.html
+++ b/geepee.html
@@ -64,93 +64,31 @@
         <div class="container-fluid no-padding">
             <div class="col-md-8 offset-md-2 section-heading text-center mb-40">
                 <!-- <span>Plans &amp; Pricing</span> -->
-                <h1>Best Unlimited
-                    Web & Graphic Design Portfolio</h1>
+                <h1>Gee Pee Aerospace and Defence</h1>
             </div>
-            <div class="tz-gallery">
+            <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-md-4">
-                        <a class="lightbox" href="img/gateman-min.jpg">
-                            <img src="img/gateman-min.jpg" alt="Gateman">
-                        </a>
+                    <div class="col-md-9">
+                        <img src="img/gpee-cover-min.jpg" alt="GeePee">
+                        <img src="img/gpeeiner-min.jpg" alt="GeePee">
+                        <img src="img/gpeeiner2.jpg" alt="GeePee">
                     </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="geepee.html">
-                            <img src="img/gpee-cover-min.jpg" alt="gateman">
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-4">
-                        <a class="lightbox" href="jamawealth.html">
-                            <img src="img/jamawealth.jpg" alt="Gateman">
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-4">
-                        <a class="lightbox" href="img/bill-board-min.jpg">
-                            <img src="img/bill-board-min.jpg" alt="Gateman">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/NZBranding.png">
-                            <img src="img/NZBranding.png" alt="Gateman">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="qfmslogin.html">
-                            <img src="img/qfms.jpg" alt="Standee">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/cs.jpg">
-                            <img src="img/cs.jpg" alt="Gateman">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/star-logo.jpg">
-                            <img src="img/star-logo.jpg" alt="Coast">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/sms.jpg">
-                            <img src="img/sms.jpg" alt="Standee">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="objectsource.html">
-                            <img src="img/objects.jpg" alt="object source">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="jewelry.html">
-                            <img src="img/jewellry1.jpg" alt="jewellry">
-                        </a>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-
-    <section class="cta-section">
-        <div class="container">
-            <div class="row cta-wrap d-flex align-items-center">
-                <div class="cta-overlay-img"></div>
-                <div class="col-lg-7 sm-padding">
-                    <div class="cta-content">
-                        <h2>UNLIMITED GRAPHIC DESIGNS for just ₹14,000/- per month
+                    <div class="col-md-3 work-decrip">
+                        <h2>The Brief
                         </h2>
-                        <p>* 14 day money back guarantee only eligible to new Graphicdesign! customers.</p>
+                        <p>Precise Engineering components designed and developed with State of the Art Machinery and a
+                            Highly Skilled Staff</p>
+                            <p>Precise Engineering components designed and developed with State of the Art Machinery and a
+                                Highly Skilled Staff</p>
                     </div>
+
                 </div>
-                <div class="col-lg-5 sm-padding">
-                    <div class="cta-content text-right">
-                        <a href="#" class="default-btn">Start Today</a>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
+
+
     <section class="widget-section bd-bottom padding">
         <div class="bubble-effect">
             <div class="bubble b-1"></div>
